fix(front): chevron and author overlap on small screens (#283)
* fix(front): chevron and author overlap on small screens

* appease ci

--- a/web/src/ui/components/Author/Author.module.scss
+++ b/web/src/ui/components/Author/Author.module.scss
@@ -4,6 +4,7 @@
     display: flex;
     align-self: flex-start;
     margin-top: -0.25rem;
+    flex-shrink: 0;
 }
 
 .author-url-name,
